# libRCT2

./: CMakeLists.txt  chunk.c  dat.c  dat_chunk.c  dat_chunk.h  dat_ride.h  dat_small_scenery.c  image.c  image.h  large_scenery.c  large_scenery.h  main.c  object.c  object.h  palette.c  palette.h  park_entrance.c  path.h  path_banner.h  path_object.c  path_object.h  ride.c  scenery_group.c  small_scenery.c  small_scenery.h  wall.c  wall.h
src/: chunk.c  image.c  image.h  main.c  object.h  park_entrance.h  path.c  path_banner.c  ride.h  scenery_group.h  small_scenery.c  wall.c  wall.h
